# cfstream

./: .gitignore  .travis.yml  Changes.md  Makefile  OMakeroot  README.md  cfstream.opam  esy.json  jbuild  myocamlbuild.ml  opam  package.json
app/: cfstream_test.ml  jbuild
lib/: CFStream_stream.ml  CFStream_stream.mli  dune
opam/: opam
src/doc/: intro.txt
src/lib/: CFStream.ml  CFStream_result_stream.ml  CFStream_result_stream.mli  CFStream_stream.ml  CFStream_stream.mli
src/test/: test_stream.ml
