opam-version: "2.0"
homepage: "https://github.com/biocaml/cfstream"
dev-repo: "git+https://github.com/biocaml/cfstream.git"
bug-reports: "https://github.com/biocaml/cfstream/issues"
license: "LGPL + linking exception"
maintainer: "Ashish Agarwal <agarwal1975@gmail.com>"
synopsis: "Stream operations in the style of Core's API"
authors: [
  "Philippe Veber <philippe.veber@gmail.com>"
  "Ashish Agarwal <agarwal1975@gmail.com>"
  "Drup <drupyog@zoho.com>"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.04.1"}
  "dune" {>= "1.0"}
  "core_kernel" {>= "v0.11.0"}
  "camlp-streams" {>= "5.0.1"}
  "ounit" {with-test}
]
